--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </main>
 
   <!-- App JS -->
-  <script src="sql.js"></script> <!-- sqlite.js or sql.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script> 
   <script src="app.js"></script>
 
 </body>
