--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     <ul id="recordList"></ul>
   </main>
 
-  <!-- App JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script> 
-  <script src="app.js"></script>
+  <!-- Scripts in proper order -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script>
+  <script src="db.js"></script>  <!-- initializes db and window.dbReady -->
+  <script src="app.js"></script> <!-- app logic that uses db -->
 
 </body>
 </html>
