--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
   <!-- NAVIGATION -->
   <div id="navBar">
-    <button id="page1Btn">Progress</button>
-    <button id="page2Btn">Records</button>
+    <button id="page1Btn">✍ Progress</button>
+    <button id="page2Btn">📋 Records</button>
   </div>
 
   <!-- PAGE 1: Progress Form + Chart -->
