--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- PAGE 1: Progress Form + Chart -->
   <div id="page1" class="page active">
     <form id="progressForm">
-      <input type="date" id="date" required>📅
+      <input type="date" id="date" placeholder="📅" required>
       <input type="number" step="0.1" id="weight" placeholder="Weight (kg)" required>
       <input type="number" step="0.1" id="fat" placeholder="Body Fat (%)">
       <input type="number" step="0.1" id="water" placeholder="Water (%)">
