--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
   </div>
 
   <!-- NAVIGATION -->
-  <div id="navBar">
-    <button id="page1Btn">✍ Progress</button>
-    <button id="page2Btn">📋 Records</button>
-  </div>
+  <div id="bottomNav">
+  <button id="page1Btn" class="active">📊 Progress</button>
+  <button id="page2Btn">📋 Records</button>
+</div>
+
 
   <!-- PAGE 1: Progress Form + Chart -->
   <div id="page1" class="page active">
